--- a/index.html
+++ b/index.html
@@ -152,24 +152,24 @@
                                 开始接受提交报名表格：
                                 <b>2020年5月1日 </b>
                             </div>
-                            <br><br>
+                            <br>
                             <div class="col-12  mt-3 ">
                                 开始接受提交项目白皮书 ：
                                 <b>2020年5月1日 </b>
                             </div>
-                            <br><br>
+                            <br>
                             <div class="col-12   mt-3">
                                 培训课程& 辅导课程 ：
-                                <b>2020年5月1日 </b>
+                                <b>2020年5月1日-2020年6月18日 </b>
                             </div>
                             <br>
                             <div class="col-12 mt-3">
-                                <br> 宣布入选国际赛的中国代表队伍 ：
+                                 宣布入选国际赛的中国代表队伍 ：
                                 <b>2020年6月28日 </b>
                             </div>
 
                             <div class="col-12  mt-3">
-                                <br> IBCOL 2020：
+                                 IBCOL 2020：
                                 <b> 2020年7月3日-5日 </b>
                             </div>
                         </div>
