zh about updated

--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -97,7 +97,9 @@
                         </div>
                         <div class="photoDesc pt-4 pb-4 pr-4 justify">
                             2018年5月28日，习近平主席在中国科学院第十九次院士大会、中国工程院第十四次院士大会上发表建设世界科技强国的讲话，明确区块链技术是中国科技强国，中华民族伟大复兴重要的科技力量。
-                            <br> <br>
+                        </div>
+
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
                             2020年4月13日，工业和信息化部科技司发布《全国区块链和分布式记账技术标准化技术委员会组建公示》，当中根据国家标准化管理委员会的批复，有关单位提出了全国区块链和分布式记账技术标准化技术委员会组建方案。目前区块链已提升到国家战略高度，能入围这样一份名单，也无疑肩负着国家的期待，当然BATJ均上榜。
                         </div>
                     </div>
@@ -121,11 +123,14 @@
                             TDI 和 iCollege
                             为「国际区块链奥林匹克竞赛」（“IBCOL”）的中国委员会「中国区块链奥林匹克竞赛」（“CN-BCOL”）的合作伙伴，为中国参赛者提供培训及提名国家代表队参加「国际区块链奥林匹克竞赛2020」（“
                             IBCOL 2020 ”）。
-                            <br> <br>
+                        </div>
+
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
                             TDI（Talent Development Institute）
                             TDI（Talent Development Institute ）是来自加拿大的国际组织，TDI的使命是以寻找下一个天才为目标的培养人才（非牟利）机构。
                             TDI透过与各种合作伙伴的培训计划教导学生知识和技能，以协助其发挥所有的潜力。TDI的证书课程更可帮助政府机构、企业、学院、私人公司等找到所需的人才，以满足市场的高需求。
-                            <br> <br>
+                        </div>
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
                             iCollege
                             iCollege是一间科技教育机构，iCollege的教学宗旨是intelligent & infinitas,
                             课程设计以轻松、有趣但又有效的多元方式为目标，让学生都以聪明的学习方式学习。我们更会引发出学生内在无限的潜能，令其尽展所长。
@@ -210,7 +215,8 @@
             <div class="col-md-4 col-sm-4 mt-3 ">
                 <div class="footerHeaderText left"><b>关于我们</b> </div>
                 <div class="">
-                    <p class="footerParaText justify">国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
+                    <p class="footerParaText justify">
+                        国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
                 </div>
             </div>
 
