--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> 联络我们 - CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
+    <title> 联络我们 CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
