--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <li><a class="NavLinkComponent colorWt" route="" href="how-to-join-cn-bcol.html">如何参加</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="get-started-with-cn-bcol.html">参赛详情</a>
                 </li>
-                <li><a class="NavLinkComponent colorWt" route="" href="常见问题 -cn-bcol.html" class="">常见问题 </a></li>
-                <li><a class="NavLinkComponent colorWt" route="" href="联络我们-cn-bcol.html" class="">联络我们</a></li>
+                <li><a class="NavLinkComponent colorWt" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
                 <li><a class="NavLinkComponent colorWt regBorder" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="./en/index.html" class="">EN</a></li>
@@ -66,8 +66,8 @@
                     <li><a href="about-cn-bcol.html">关于我们</a></li>
                     <li><a href="how-to-join-cn-bcol.html">如何参加</a></li>
                     <li><a href="get-started-with-cn-bcol.html">参赛详情</a></li>
-                    <li><a href="常见问题 -cn-bcol.html">常见问题 </a></li>
-                    <li class="featured"><a href="联络我们-cn-bcol.html">联络我们</a></li>
+                    <li><a href="faq-cn-bcol.html">常见问题 </a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html">联络我们</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/index.html" class="">EN</a></li>
                 </ul>
