en anchor updated

--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -51,12 +51,12 @@
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent " route="" href="about-cn-BCOL.html">关于我们</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-BCOL.html"> 如何参加</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-BCOL.html"> 参赛详情</a>
+                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html"> 参赛详情</a>
                 </li>
-                <li><a class="NavLinkComponent " route="" href="faq-cn-BCOL.html" class="">常见问题 </a></li>
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-BCOL.html" class=""> 联络我们</a>
+                <li><a class="NavLinkComponent " route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-bcol.html" class=""> 联络我们</a>
                 </li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
@@ -68,11 +68,11 @@
             <a href="#0" class="header-nav__close" title="close"><span>关闭</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-BCOL.html">关于我们</a></li>
-                    <li><a href="how-to-join-cn-BCOL.html"> 如何参加</a></li>
-                    <li><a href="get-started-with-cn-BCOL.html"> 参赛详情</a></li>
-                    <li><a href="faq-cn-BCOL.html">常见问题 </a></li>
-                    <li class="featured"><a href="contact-cn-BCOL.html"> 联络我们</a></li>
+                    <li><a href="about-cn-bcol.html">关于我们</a></li>
+                    <li><a href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                    <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
+                    <li><a href="faq-cn-bcol.html">常见问题 </a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>
                 </ul>
