--- a/en/contact-cn-bcol.html
+++ b/en/contact-cn-bcol.html
@@ -50,12 +50,12 @@
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent " route="" href="about-cn-BCOL.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-BCOL.html">How To Join</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-BCOL.html">Get Started</a>
+                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">About</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html">How To Join</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html">Get Started</a>
                 </li>
-                <li><a class="NavLinkComponent " route="" href="faq-cn-BCOL.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-BCOL.html"
+                <li><a class="NavLinkComponent " route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-bcol.html"
                         class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
@@ -67,11 +67,11 @@
             <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-BCOL.html">About</a></li>
-                    <li><a href="how-to-join-cn-BCOL.html">How To Join</a></li>
-                    <li><a href="get-started-with-cn-BCOL.html">Get Started</a></li>
-                    <li><a href="faq-cn-BCOL.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-cn-BCOL.html">Contact</a></li>
+                    <li><a href="about-cn-bcol.html">About</a></li>
+                    <li><a href="how-to-join-cn-bcol.html">How To Join</a></li>
+                    <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
+                    <li><a href="faq-cn-bcol.html">FAQ</a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
                     <li><a class="NavLinkComponent" route="" href="../contact-cn-bcol.html" class="">中文</a></li>
                 </ul>
