erice content fixed

--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -201,9 +201,9 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">注册</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">发掘更多
+               <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
         </a>
     </div>
 
