--- a/en/about-cn-bcol.html
+++ b/en/about-cn-bcol.html
@@ -56,7 +56,7 @@
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                        <li><a class="NavLinkComponent" route="" href="../about-cn-bcol.html" class="">中文</a></li>
+                <li><a class="NavLinkComponent" route="" href="../about-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -105,40 +105,39 @@
 
 
 
+
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="photoTitle">
-                            <h2 style="all:unset;">Mission</h2>
+                            <h2 style="all:unset;">CN-BCOL Partners </h2>
                         </div>
-                        <div class="photoDesc pt-4 pb-4 pr-4 justify"> The International Blockchain Olympiad (IBCOL) is
-                            an
-                            annual global
-                            competition inviting current and recent students to propose solutions for real-world
-                            problems with blockchain technology. In a worldwide hunt for blockchain talent, IBCOL
-                            combines the practicality of case competitions with the open-ended problem-solving culture
-                            of hack-a-thons, where participants submit a whitepaper like an academic conference and
-                            implementations of capstone projects.
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify"> TDI and iCollege as the partners of the China
+                            Blockchain Olympiad（“CN-BCOL”）for assisting in training and nominating
+                            Chinese participants to join the 2020 International Blockchain Olympiad（“ IBCOL 2020 ”）as
+                            repressentatives of China.
                         </div>
                     </div>
                     <div class="row colorBk">
                         <ul>
-                            <li class="p-4 justify"><b>Promoting Awareness on Blockchain Technology & Applications:</b>
-                                students from
-                                around the world will benefit from the experience of participating in the IBCOL program
-                                of activities, which includes seminar series, specialised training and workshops,
-                                mentoring, and networking events besides the actual competitions. This will cultivate a
-                                genuine interest in the area of innovation, originality, creativity and cutting-edge
-                                technology. It will also instill the right ethical values in the younger generation to
-                                pave the way for their further exploration of blockchain in the future.
+                            <li class="p-4 justify"><b> TDI（Talent Development Institute）</b>
+                                <br>
+                                The mission of the Talent Development Institute (TDI) is to develop talent, for
+                                individuals and for organizations. Through various partners and programs, TDI helps
+                                people achieve their full potential by building and nurturing skills and specialties
+                                that are proven to be in high demand by the market. With its patent-pending verified
+                                credentials ecosystem, TDI helps organizations find the talent they seek with complete
+                                confidence in where the talent acquired which skills.
+
                             </li>
-                            <li class="p-4 justify"><b>Enhancing Employability by Equipping Participants with helpful
-                                    Skills:</b> the
-                                prospective and actual participants will benefit tremendously from the IBCOL programme,
-                                as they learn practical skills and knowledge outside their disciplines and push the
-                                boundaries of their comfort zones. Students get a taste of the real world, and learn how
-                                to identify and overcome challenges in actually making something happen.
+                            <li class="p-4 justify"><b>iCollege </b> <br>
+                                The mission of iCollege is teaching intelligent & infinitas. Our course design aims to
+                                make the student feel relaxed and have fun in the classroom but learn in effective ways.
+                                We will even bring out the students' unlimited potential and let them show their full
+                                potential.
+
+
                             </li>
                         </ul>
                     </div>
@@ -185,7 +184,7 @@
         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
         <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
- </a>
+        </a>
     </div>
 
 
