--- a/en/get-started-with-cn-bcol.html
+++ b/en/get-started-with-cn-bcol.html
@@ -74,7 +74,8 @@
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                    <li><a class="NavLinkComponent" route="" href="../get-started-with-cn-bcol.html" class="">中文</a></li>
+                    <li><a class="NavLinkComponent" route="" href="../get-started-with-cn-bcol.html" class="">中文</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -167,13 +168,13 @@
             <div class="row">
                 <div class="col-md-2 col-sm-12 toolsImgMedia1 mediaResourceImg">
                     <div class="">
-                        <img class="getStartImg mt-2" src=".././images/toolsImg/slack4848.png">
+                        <img class="getStartImg mt-2" src=".././images/toolsImg/slack2.png">
                     </div>
                 </div>
                 <div class="col-md-10 col-sm-12 mediaResourceText">
-                    <div class=""><b>IBCOL 2020 SLACK COMMUNITY </b><br>
-                        Connect with fellow students and mentors, receive the latest updates. Request an invite at
-                        <a href="">cn@ibcol.org</a></div>
+                    <div class=""><b> VOOV Meeting </b><br>
+                        Connect with iCollege, receive the latest updates. Request an invite at
+                        <a href="">TDI@iCollege.hk</a></div>
                 </div>
             </div>
 
@@ -186,7 +187,10 @@
                 <div class="col-md-10 col-sm-12 mediaResourceText">
                     <div class=""><b>SAMPLE WHITEPAPER FORMAT</b><br>
 
-                        Based on a style guide from a Canadian university. Only a guideline, not a requirement. Available for <a href="https://docs.google.com/document/d/115Y7oZ6AwjJz9x7Kc6s0uZKb5yj7dlwnw6_sFqUIl68/edit#">download</a></div>
+                        Based on a style guide from a Canadian university. Only a guideline, not a requirement.
+                        Available for <a
+                            href="https://docs.google.com/document/d/115Y7oZ6AwjJz9x7Kc6s0uZKb5yj7dlwnw6_sFqUIl68/edit#">download</a>
+                    </div>
                 </div>
             </div>
 
@@ -202,6 +206,9 @@
                 </div>
             </div>
         </div>
+
+
+
 
 
     </section>
