--- a/faq-cn-bcol.html
+++ b/faq-cn-bcol.html
@@ -105,19 +105,20 @@
                         <h3 style="all:unset;">关于参加CN-BCOL常见问题：</h3>
                     </b></div>
                 <div class="fs18f">
-                    <div class="justify">我完全不会区块链这方面的知识，我可以参加竞赛吗？<br>
-                        可以的，本次活动的目的是培养全球下一代的区块链专业人士。参与者有机会从零开始学习区块链，并将他们学到的知识应用于竞赛中。<br>培训详情请咨询 iCollege.
+                    <br>
+                    <div class="justify"><b>我完全不会区块链这方面的知识，我可以参加竞赛吗？</b><br>
+                        可以的，本次活动的目的是培养全球下一代的区块链专业人士。参与者有机会从零开始学习区块链，并将他们学到的知识应用于竞赛中。培训详情请咨询 iCollege.
                         <br><br>
-                        我不想参加培训课程，可以参加竞赛吗？<br>
+                        <b>我不想参加培训课程，可以参加竞赛吗？</b><br>
                         可以的，培训课程完全自愿性质参加，但我们建议参赛者有区块链相关的知识，这样参赛才会有竞争力。
                         <br><br>
-                        我不是中国国籍学生，我可以参加CN-BCOL吗？<br>
+                        <b> 我不是中国国籍学生，我可以参加CN-BCOL吗？</b><br>
                         只要你代表的学校是中国国内的认可的学校就可以参加CN-BCOL.
                         <br><br>
-                        我可以用中文写白皮书吗？<br>
+                        <b>我可以用中文写白皮书吗？</b><br>
                         可以的，我们接受中文书写的白皮书。
                         <br><br>
-                        我参赛时使用语言是普通话，可以吗？<br>
+                        <b>我参赛时使用语言是普通话，可以吗？</b><br>
                         可以的，如果进入国际赛，英文不太好的团队可以向IBCOL陈述。 IBCOL会作出适当的安排，例如派志愿者当翻译。
                     </div>
                     <!-- <div class="mt-5 justify">
@@ -185,8 +186,7 @@
 
 
     <div class="home-content__button aboveFooterBtn mt-5">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
-            class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">IBCOL 常见问题 </a>
     </div>
 
