--- a/how-to-join-cn-bcol.html
+++ b/how-to-join-cn-bcol.html
@@ -227,7 +227,7 @@
                                 </h4>
                                 <p class="colorBk paraTextLineHeight">
                                     国际赛第三名<br>
-                                    可获得$三1024奖金（美元）
+                                    可获得$1024奖金（美元）
                                 </p>
                                 <div class="inSizeBall2 inSizeBallText"><b>3</b></div>
                             </div>
@@ -258,7 +258,7 @@
                                 <h4 class="item-title">最佳技术
                                 </h4>
                                 <p class="colorBk paraTextLineHeight">
-                                    Re 海报板＋Poc最高分的<br>
+                                    海报板＋Poc最高分的<br>
                                     可获得$128奖金（美元）
                                 </p>
                                 <div class="inSizeBall2  inSizeBallText"><b>P</b></div>
@@ -317,13 +317,11 @@
                     <div class="row">
                         <div class="peImgFrame"><img class="toolsImg" src="images/toolsImg/pb.png"></div>
                         <div class="peTitle colorBk mt-3">
-                            海报抽述 (40%)
+                            海报描述 (40%)
 
                         </div>
                         <div class="colorBk peDesc pl-5 pr-5">
-                            概述及演示<br>
-                            在海报上描述该项目：<br>
-                            最大14400×10800像素
+                            概述及演示 <br>在海报上描述该项目： <br>最大14400×10800像素
                         </div>
                     </div>
                 </div>
@@ -344,7 +342,7 @@
                 </div>
 
                 <div class="col-md-12 mt-3">
-                    <p class="mt-3 colorBk fs18f">评判会从商业上的可行性和技术上的可行性角度对项目进行评估：
+                    <p class="mt-3 colorBk fs18f left">评判会从商业上的可行性和技术上的可行性角度对项目进行评估：
 
                     </p>
                 </div>
@@ -396,7 +394,7 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">注册</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">合乎资格 </a>
     </div>
