--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <div class="s-homeTextColor ">区块链技术是中国科技强国，中华民族伟大复兴重要的科技力量！ </div>
 
                 <div class="home-content__button media12Btn mt-120">
-                    <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+                    <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
                         class="btn btn--primary btn--large fs18">注册</a>
-                    <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">发掘更多
+                    <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
 
                     </a>
                 </div>
@@ -149,28 +149,28 @@
                     <div class="photoDesc justify">
                         <div class="row w100 ">
                             <div class="col-12  ">
-                                开始接受提交报名表格：
-                                <b>2020年5月1日 </b>
+                                 <b>开始接受提交报名表格：
+                               2020年5月1日 </b>
                             </div>
                             <br>
                             <div class="col-12  mt-3 ">
-                                开始接受提交项目白皮书 ：
-                                <b>2020年5月1日 </b>
+                                <b> 开始接受提交项目白皮书 ：
+                               2020年5月1日 </b>
                             </div>
                             <br>
                             <div class="col-12   mt-3">
-                                培训课程& 辅导课程 ：
-                                <b>2020年5月1日-2020年6月18日 </b>
+                                <b>培训课程& 辅导课程 ：
+                                2020年5月1日-2020年6月18日 </b>
                             </div>
                             <br>
                             <div class="col-12 mt-3">
-                                 宣布入选国际赛的中国代表队伍 ：
-                                <b>2020年6月28日 </b>
+                                <b>  宣布入选国际赛的中国代表队伍 ：
+                                2020年6月28日 </b>
                             </div>
 
                             <div class="col-12  mt-3">
-                                 IBCOL 2020：
-                                <b> 2020年7月3日-5日 </b>
+                                <b>IBCOL 2020：
+                               2020年7月3日-5日 </b>
                             </div>
                         </div>
                     </div>
@@ -318,9 +318,9 @@
     </section>
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">注册</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">发掘更多
+               <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
  </a>
     </div>
 
