--- a/get-started-with-cn-bcol.html
+++ b/get-started-with-cn-bcol.html
@@ -208,7 +208,7 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">注册</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">常见问题 </a>
     </div>
