--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -73,7 +73,7 @@
                     <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
                     <li><a href="faq-cn-bcol.html">常见问题 </a></li>
                     <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
                     <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
