--- a/en/about-cn-bcol.html
+++ b/en/about-cn-bcol.html
@@ -55,7 +55,7 @@
                 <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                 <li><a class="NavLinkComponent" route="" href="../about-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
@@ -69,7 +69,7 @@
                     <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                     <li><a class="NavLinkComponent" route="" href="../about-cn-bcol.html" class="">中文</a></li>
                 </ul>
             </div>
@@ -181,9 +181,9 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
+        <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">FIND OUT MORE
         </a>
     </div>
 
