--- a/how-to-join-cn-bcol.html
+++ b/how-to-join-cn-bcol.html
@@ -59,7 +59,7 @@
                 <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent" route="" href="./en/how-to-join-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
