--- a/en/faq-cn-bcol.html
+++ b/en/faq-cn-bcol.html
@@ -57,7 +57,7 @@
                 <li><a class="NavLinkComponent pageAnchorColor" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                         <li><a class="NavLinkComponent" route="" href="../faq-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
@@ -71,7 +71,7 @@
                     <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                     <li><a class="NavLinkComponent" route="" href="../faq-cn-bcol.html" class="">中文</a></li>
                 </ul>
             </div>
@@ -184,7 +184,7 @@
 
 
     <div class="home-content__button aboveFooterBtn mt-5">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">IBCOL FAQ </a>
     </div>
