--- a/en/get-started-with-cn-bcol.html
+++ b/en/get-started-with-cn-bcol.html
@@ -59,7 +59,7 @@
                 <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                 <li><a class="NavLinkComponent" route="" href="../get-started-with-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
@@ -73,7 +73,7 @@
                     <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                     <li><a class="NavLinkComponent" route="" href="../get-started-with-cn-bcol.html" class="">中文</a>
                     </li>
                 </ul>
@@ -216,7 +216,7 @@
 
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
         <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">FAQ </a>
     </div>
