--- a/en/index.html
+++ b/en/index.html
@@ -54,7 +54,7 @@
                 <li><a class="NavLinkComponent colorWt" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li><a class="NavLinkComponent colorWt regBorder" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="../index.html" class="">中文</a></li>
             </ul>
         </div>
@@ -68,7 +68,7 @@
                     <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="https://wj.qq.com/s2/6039506/da39/" target="_blank">REGISTER</a></li>
                     <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
                 </ul>
             </div>
@@ -91,13 +91,13 @@
                 <h1 class="s-homeHeaderTextColor w100">Offer Decentralized Solutions <br>
                     to Real-World Challenges</h1>
 
-                <div class="s-homeTextColor ">Nurture Canada’s top talents and professionals <br>
-                    across all disciplines and industries </div>
+                <div class="s-homeTextColor ">IBCOL 2020 will be held entirely online from July 3rd to 5th from 9am to 9pm (GMT+8)
+                    Stay tuned for more details! </div>
 
                 <div class="home-content__button media12Btn mt-120">
-                    <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+                    <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
                         class="btn btn--primary btn--large fs18">REGISTER</a>
-                    <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
+                    <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">FIND OUT MORE
 
                     </a>
                 </div>
@@ -316,9 +316,9 @@
     </section>
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
+        <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">FIND OUT MORE
         </a>
     </div>
 
