--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a class="NavLinkComponent colorWt" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
                 <li><a class="NavLinkComponent colorWt regBorder" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="./en/index.html" class="">EN</a></li>
             </ul>
         </div>
