--- a/en/get-started-with-cn-bcol.html
+++ b/en/get-started-with-cn-bcol.html
@@ -6,8 +6,9 @@
     <title>Get started for the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
     </title>
     <link rel="icon" href=".././images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
-    <meta name="description" content="" />
+    <meta name="description" content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
     <meta name="author" content="" />
+    <meta property="og:image" content=".././images/logo/IBCOL-CN.png"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
