--- a/en/contact-cn-bcol.html
+++ b/en/contact-cn-bcol.html
@@ -156,7 +156,7 @@
                         <div class="fs18 colorBk">Chinese Blockchain Olympiad,<br>
                             C/O International Blockchain Olympiad,<br>
                             333A, 1W Science Park Avenue,<br>
-                            New Territories, Chinese<br>
+                            New Territories, Hong Kong<br>
                             <a href="" target="_blank">cn@ibcol.org</a></div>
 
                     </div>
