--- a/en/index.html
+++ b/en/index.html
@@ -81,7 +81,7 @@
     </header>
 
     <section id="home" class="s-home page-hero target-section" data-parallax="scroll"
-        data-image-src=".././images/Saudi-Arabian-Blockchain-Olympiad.jpg" data-natural-width="3000"
+        data-image-src=".././images/cn.jpg" data-natural-width="3000"
         data-natural-height="2000" data-position-y="center">
         <div class="grid-overlay">
             <div></div>
