--- a/get-started-with-cn-bcol.html
+++ b/get-started-with-cn-bcol.html
@@ -187,7 +187,7 @@
                 <div class="col-md-10 col-sm-12 mediaResourceText">
                     <div class=""><b>白皮书样版</b><br>
                    
-                        这是供参考的样版，不是必须要求的格式，<a href="">可下载</a></div>
+                        这是供参考的样版，不是必须要求的格式，<a href="https://docs.google.com/document/d/115Y7oZ6AwjJz9x7Kc6s0uZKb5yj7dlwnw6_sFqUIl68/edit#">可下载</a></div>
                 </div>
             </div>
 
@@ -198,7 +198,7 @@
                 <div class="col-md-10 col-sm-12 mediaResourceText">
                     <div class=""><b>海报演示版格式
                      </b><br>
-                     免费模板标准尺寸（36×48”），这是供参考的样版，不是必须要求的格式，<a href="https://docs.google.com/document/d/115Y7oZ6AwjJz9x7Kc6s0uZKb5yj7dlwnw6_sFqUIl68/edit#">可下载</a></div>
+                     免费模板标准尺寸（36×48”），这是供参考的样版，不是必须要求的格式，<a href="https://www.ibcol.org/posterboard.html">可下载</a></div>
                 </div>
             </div>
         </div>
