postboard link updated

--- a/how-to-join-cn-bcol.html
+++ b/how-to-join-cn-bcol.html
@@ -322,8 +322,7 @@
 
                         </div>
                         <div class="colorBk peDesc pl-5 pr-5">
-                            概述及演示 <br>在海报上描述该项目： <br>最大14400×10800像素
-                        </div>
+                            <a href="https://www.ibcol.org/posterboard.html" target="_blank">概述及演示 <br>在海报上描述该项目： <br>最大14400×10800像素</a>                        </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 mediaPE_MarFix">
