Ms. Erica Tam updated

--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -135,6 +135,22 @@
                         </div>
                     </div>
 
+                    <div class="row contactPerson colorBk mt-5">
+                        <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
+                            <img src="images/contact/Ms. Erica Tam sq.jpeg" class="circleImg">
+                        </div>
+
+                        <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
+                            <div class="name"><b>Erica Tam 愛瑞卡
+
+
+
+                                </b></div>
+
+                            <div class="position"> 学生联络</div>
+                        </div>
+                    </div>
+
 
                     <div class="row contactPerson colorBk mt-5">
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
