--- a/en/contact-cn-bcol.html
+++ b/en/contact-cn-bcol.html
@@ -132,6 +132,21 @@
                         </div>
                     </div>
 
+                    <div class="row contactPerson colorBk mt-5">
+                        <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
+                            <img src=".././images/contact/Ms. Erica Tam sq.jpeg" class="circleImg">
+                        </div>
+
+                        <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
+                            <div class="name"><b> Ms. Erica Tam
+                              
+
+                                </b></div>
+
+                            <div class="position">  Student Relations</div>
+                        </div>
+                    </div>
+
 
                     <div class="row contactPerson colorBk mt-5">
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 mediaCol-md-6 centre">
