--- a/index.html
+++ b/index.html
@@ -184,27 +184,27 @@
                     </div>
                     <div class="photoDesc justify">
                         <div class="row w100 ">
-                            <div class="col-12  ">
+                            <div class="col-12  l-0-w375">
                                  <b>开始接受提交报名表格：
                                2020年5月1日 </b>
                             </div>
                             <br>
-                            <div class="col-12  mt-3 ">
+                            <div class="col-12 l-0-w375 mt-3 ">
                                 <b> 开始接受提交项目白皮书 ：
                                2020年5月1日 </b>
                             </div>
                             <br>
-                            <div class="col-12   mt-3">
+                            <div class="col-12 l-0-w375  mt-3">
                                 <b>培训课程& 辅导课程 ：
                                 2020年5月1日-2020年6月18日 </b>
                             </div>
                             <br>
-                            <div class="col-12 mt-3">
+                            <div class="col-12 mt-3 l-0-w375">
                                 <b>  宣布入选国际赛的中国代表队伍 ：
                                 2020年6月28日 </b>
                             </div>
 
-                            <div class="col-12  mt-3">
+                            <div class="col-12 l-0-w375 mt-3">
                                 <b>IBCOL 2020：
                                2020年7月3日-5日 </b>
                             </div>
