--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
             </div>
             <div class="row">
                 <div class="block-1-3">
-                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                    <!-- <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://www.hsbc.com.hk" target="_blank">
                             <div>
                                 <img class="sponsorImg" src="images/sponsor/IBCOL-2020-Organiser-HSBC.png">
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://www.cb.cityu.edu.hk"
                             target="_blank">
@@ -391,7 +391,7 @@
                         <a href="https://www.linkedin.com/company/ibcol" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/li.png"></a>&nbsp;&nbsp;</div>
                 </div>               <div class="col-12 mb-4 mt-4">
-   
+
                 </div>
             </div>
 
